--- a/package.json
+++ b/package.json
@@ -6,25 +6,34 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test-front": "jest --watch -- --testEnvironment=frontend",
+    "test-back": "jest --watch -- --testEnvironment=backend"
   },
   "dependencies": {
     "@headlessui/react": "^1.7.3",
     "@heroicons/react": "^2.0.12",
     "axios": "^1.1.3",
     "next": "13.0.0",
+    "node-mocks-http": "^1.11.0",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.4.0",
     "@types/node": "18.11.7",
     "@types/react": "18.0.24",
     "@types/react-dom": "18.0.8",
     "autoprefixer": "^10.4.13",
     "eslint": "8.26.0",
     "eslint-config-next": "13.0.0",
+    "jest": "^29.2.2",
+    "jest-environment-jsdom": "^29.2.2",
+    "jest-watch-typeahead": "^2.2.0",
     "postcss": "^8.4.18",
     "tailwindcss": "^3.2.1",
+    "ts-node": "^10.9.1",
     "typescript": "4.8.4"
   }
 }
